--- a/yamls/claroline.yml
+++ b/yamls/claroline.yml
@@ -6,6 +6,6 @@ Claroline:
     location: ['/claroline/inc/installedVersion.inc.php']
     secure_version: '1.11.10'
     regexp: ['\$new_version.*?(?P<version>[0-9.]{1,})']
-    cve: 'http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2013-4753'
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2013-4753'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
