--- a/yamls/concrete5.yml
+++ b/yamls/concrete5.yml
@@ -4,11 +4,14 @@
 # CVE-2014-5108 5.6.3
 # CVE-2014-XXXX 5.7.3 http://seclists.org/fulldisclosure/2014/Dec/38 http://www.openwall.com/lists/oss-security/2015/01/02/1 https://github.com/concrete5/concrete5-5.7.0/commit/e3d47d2af88ddef36deaf754ef22f1f39b9b623b
 # CVE-2015-2250 5.7.4
+# CVE-2017-6908 TODO
+# CVE-2017-6905 TODO
+# CVE-2017-7725 TODO
 concrete5:
   1:
     location: ['/concrete/config/version.php']
     secure_version: '5.7.4'
     regexp: ['\$APP_VERSION.*?(?P<version>[0-9.]+)']
-    cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-2250'
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2015-2250'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
