--- a/yamls/espocrm.yml
+++ b/yamls/espocrm.yml
@@ -8,6 +8,6 @@ EspoCRM:
     location: ['/application/Espo/Core/defaults/config.php']
     secure_version: '2.6.0'
     regexp: ["\t'version.*?(?P<version>[0-9.]+)"]
-    cve: 'http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2014-7985 http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2014-7986 http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2014-7987 https://www.htbridge.com/advisory/HTB23238'
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2014-7985 https://nvd.nist.gov/vuln/detail/CVE-2014-7986 https://nvd.nist.gov/vuln/detail/CVE-2014-7987 https://www.htbridge.com/advisory/HTB23238'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
