--- a/yamls/etherpad.yml
+++ b/yamls/etherpad.yml
@@ -6,5 +6,5 @@ Etherpad:
     location: ['/src/package.json']
     secure_version: '1.5.3'
     regexp: ['.*?version.*?(?P<version>[0-9.]+)']
-    cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-3297'
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2015-3297'
     fingerprint: detect_general
