--- a/yamls/flatpress.yml
+++ b/yamls/flatpress.yml
@@ -5,6 +5,6 @@ Flatpress:
     location: ['/fp-includes/core/core.system.php']
     secure_version: '1.0.3'
     regexp: ['.*?SYSTEM_VER.*?(?P<version>[0-9.]+)']
-    cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2014-100036 https://www.netsparker.com/critical-xss-vulnerabilities-in-flatpress/'
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2014-100036 https://www.netsparker.com/critical-xss-vulnerabilities-in-flatpress/'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
