--- a/yamls/genix.yml
+++ b/yamls/genix.yml
@@ -11,11 +11,12 @@
 # CVE-2017-6065 TODO    https://github.com/semplon/GeniXCMS/issues/71 latest 1.0.2 is affected
 # CVE-2017-8762 TODO    https://github.com/semplon/GeniXCMS/issues/73 latest 1.0.2 is affected
 # CVE-2017-8780 TODO    https://github.com/semplon/GeniXCMS/issues/74 latest 1.0.2 is affected
+# CVE-2017-8827 TODO
 GeniXCMS:
   1:
     location: ['/inc/lib/System.class.php']
     secure_version: '1.0.2'
     regexp: ['    static \$version          = "(?P<version>[0-9.]+)']
-    cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2017-5959'
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2017-5959'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
