--- a/yamls/gollum.yml
+++ b/yamls/gollum.yml
@@ -6,5 +6,5 @@ Gollum:
     location: ['/lib/gollum.rb']
     secure_version: '4.0.1'
     regexp: ["  VERSION = '(?P<version>[0-9.]+)"]
-    cve: 'http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-7314 http://www.openwall.com/lists/oss-security/2015/09/20/3'
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2015-7314 http://www.openwall.com/lists/oss-security/2015/09/20/3'
     fingerprint: detect_general
