--- a/yamls/impresscms.yml
+++ b/yamls/impresscms.yml
@@ -8,6 +8,6 @@ ImpressCMS:
     location: ['/htdocs/include/version.php']
     secure_version: '1.3.7'
     regexp: ["define.*?ICMS_VERSION_NAME.*?ImpressCMS.*?(?P<version>[0-9.]+)"]
-    cve: 'http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2014-4036'
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2014-4036'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
