--- a/yamls/mahara.yml
+++ b/yamls/mahara.yml
@@ -33,6 +33,6 @@ Mahara:
     location: ['/htdocs/lib/version.php']
     secure_version: '1.7.3'
     regexp: ['\$config->release.*?(?P<version>[0-9.]+)']
-    cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2013-4429 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2013-4430 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2013-4431 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2013-4432'
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2013-4429 https://nvd.nist.gov/vuln/detail/CVE-2013-4430 https://nvd.nist.gov/vuln/detail/CVE-2013-4431 https://nvd.nist.gov/vuln/detail/CVE-2013-4432'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
