--- a/yamls/minibb.yml
+++ b/yamls/minibb.yml
@@ -8,6 +8,6 @@ MiniBB:
     location: ['/bb_functions.php']
     secure_version: '3.0.1'
     regexp: ['\$version=.*?(?P<version>[0-9.]+)']
-    cve: 'http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2013-5020'
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2013-5020'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
