--- a/yamls/moinmoin.yml
+++ b/yamls/moinmoin.yml
@@ -55,5 +55,5 @@ MoinMoin:
     location: ['/MoinMoin/version.py']
     secure_version: '1.9.9'
     regexp: ['.*?release.*?(?P<version>[0-9.]{1,})']
-    cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-7146 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-7148 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-9119 http://moinmo.in/SecurityFixes'
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2016-7146 https://nvd.nist.gov/vuln/detail/CVE-2016-7148 https://nvd.nist.gov/vuln/detail/CVE-2016-9119 http://moinmo.in/SecurityFixes'
     fingerprint: detect_general
