--- a/yamls/nibbleblog.yml
+++ b/yamls/nibbleblog.yml
@@ -7,6 +7,6 @@ Nibbleblog:
     location: ['/admin/boot/rules/98-constants.bit']
     secure_version: '4.0.5'
     regexp: ['define.*?NIBBLEBLOG_VERSION.*?(?P<version>[0-9.]+)']
-    cve: 'http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-6966 http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-6967 http://blog.nibbleblog.com/post/nibbleblog-v4-0-5/'
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2015-6966 https://nvd.nist.gov/vuln/detail/CVE-2015-6967 http://blog.nibbleblog.com/post/nibbleblog-v4-0-5/'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
