--- a/yamls/pbboard.yml
+++ b/yamls/pbboard.yml
@@ -7,6 +7,6 @@ PBBoard:
     location: ['/modules/new_topic.module.php']
     secure_version: '3.0.1'
     regexp: ['.*?MySBB_version.*?(?P<version>[0-9.]+)']
-    cve: 'http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2014-9215'
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2014-9215'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
