--- a/yamls/pmwiki.yml
+++ b/yamls/pmwiki.yml
@@ -7,6 +7,6 @@ PmWiki:
     location: ['/scripts/version.php']
     secure_version: '2.2.35'
     regexp: ['.*?\$Version.*?pmwiki-(?P<version>[0-9.]+?[0-9]+)']
-    cve: 'http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2011-4453'
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2011-4453'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
