--- a/yamls/spip.yml
+++ b/yamls/spip.yml
@@ -8,12 +8,15 @@
 # CVE-2016-7982 3.1.3   http://www.openwall.com/lists/oss-security/2016/10/12/8
 # CVE-2016-7998 3.1.3   http://www.openwall.com/lists/oss-security/2016/10/12/9
 # CVE-2016-7999 3.1.3   http://www.openwall.com/lists/oss-security/2016/10/12/10
+# CVE-2016-9152 TODO    https://core.spip.net/projects/spip/repository/revisions/23290
+# CVE-2016-9997 TODO    https://core.spip.net/projects/spip/repository/revisions/23288
+# CVE-2016-9998 TODO    https://core.spip.net/projects/spip/repository/revisions/23288
 SPIP 3:
   1:
     location: ['/ecrire/inc_version.php']
     secure_version: '3.1.3'
     regexp: ['\$spip_version_branche.*?(?P<version>3\.[0-9.]+)']
-    cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-7980 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-7981 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-7982 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-7998 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-7999'
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2016-7980 https://nvd.nist.gov/vuln/detail/CVE-2016-7981 https://nvd.nist.gov/vuln/detail/CVE-2016-7982 https://nvd.nist.gov/vuln/detail/CVE-2016-7998 https://nvd.nist.gov/vuln/detail/CVE-2016-7999'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 SPIP 2:
