--- a/yamls/squirrelmail.yml
+++ b/yamls/squirrelmail.yml
@@ -3,11 +3,12 @@
 # CVE-2010-4555 1.4.22  http://www.squirrelmail.org/security/issue/2011-07-11
 # CVE-2011-2752 1.4.22  http://www.squirrelmail.org/security/issue/2011-07-11
 # CVE-2011-2753 1.4.22  http://www.squirrelmail.org/security/issue/2011-07-11
+# CVE-2017-7692 TODO    https://legalhackers.com/advisories/SquirrelMail-Exploit-Remote-Code-Exec-CVE-2017-7692-Vuln.html http://seclists.org/fulldisclosure/2017/Apr/89 http://www.openwall.com/lists/oss-security/2017/04/24/6
 SquirrelMail:
   1:
     location: ['/functions/strings.php']
     secure_version: '1.4.22'
     regexp: ['\$version.*?(?P<version>[0-9.]+)']
-    cve: 'http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2010-4554 http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2010-4555 http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2011-2752 http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2011-2753'
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2010-4554 https://nvd.nist.gov/vuln/detail/CVE-2010-4555 https://nvd.nist.gov/vuln/detail/CVE-2011-2752 https://nvd.nist.gov/vuln/detail/CVE-2011-2753'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
