--- a/yamls/trac.yml
+++ b/yamls/trac.yml
@@ -19,5 +19,5 @@ Trac:
     location: ['/Trac.egg-info/PKG-INFO']
     secure_version: '0.11.7'
     regexp: ['Version.*?(?P<version>[.0-9]{2,})']
-    cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2010-5108'
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2010-5108'
     fingerprint: detect_general
