--- a/yamls/zikula.yml
+++ b/yamls/zikula.yml
@@ -7,6 +7,6 @@ Zikula:
     location: ['/lib/Zikula/Core.php', '/lib/legacy/Zikula/Core.php']
     secure_version: '1.4.4'
     regexp: ['.*?const.*?VERSION_NUM.*?(?P<version>[0-9.]+)']
-    cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-9835'
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2016-9835'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
