--- a/yamls/drupal.yml
+++ b/yamls/drupal.yml
@@ -70,6 +70,9 @@
 # https://drupal.org/SA-CORE-2017-003   CVE-2017-6920   8.3.4/7.56
 # https://drupal.org/SA-CORE-2017-003   CVE-2017-6921   8.3.4/7.56
 # https://drupal.org/SA-CORE-2017-003   CVE-2017-6922   8.3.4/7.56
+# https://drupal.org/SA-CORE-2017-004   CVE-2017-6923   8.3.7
+# https://drupal.org/SA-CORE-2017-004   CVE-2017-6924   8.3.7
+# https://drupal.org/SA-CORE-2017-004   CVE-2017-6925   8.3.7
 Drupal 8:
   1:
     location: ['/core/lib/Drupal.php']
@@ -84,13 +87,5 @@ Drupal 7:
     secure_version: '7.56'
     regexp: ['define.*?VERSION.*?(?P<version>[0-9.]+)']
     cve: 'https://drupal.org/SA-CORE-2017-003 https://nvd.nist.gov/vuln/detail/CVE-2017-6920 https://nvd.nist.gov/vuln/detail/CVE-2017-6921 https://nvd.nist.gov/vuln/detail/CVE-2017-6922'
-    fingerprint: detect_general
-    post_processing: ['php5.fcgi']
-Drupal 6:
-  1:
-    location: ['/CHANGELOG.txt']
-    secure_version: '8.3.4'
-    regexp: ['^Drupal (?P<version>[0-6]\.[0-9.]+)']
-    cve: 'https://www.drupal.org/drupal-6-eol'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
