--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -2292,3 +2292,11 @@ WordPress plugin shibboleth:
     cve: 'https://nvd.nist.gov/vuln/detail/CVE-2017-14313'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin backwpup:
+  1:
+    location: ['/wp-content/plugins/backwpup/readme.txt']
+    secure_version: '3.4.2'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2017-2551 http://www.vapidlabs.com/advisory.php?v=201'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
