--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -2308,3 +2308,11 @@ WordPress plugin content-audit:
     cve: 'https://security.dxw.com/advisories/csrf-xss-content-audit/'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin gallery-album:
+  1:
+    location: ['/wp-content/plugins/gallery-album/readme.txt']
+    secure_version: '1.2.1'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2017-14125 http://lists.openwall.net/full-disclosure/2017/09/22/1'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
