--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -575,6 +575,7 @@ WordPress plugin wp-easy-gallery:
     cve: 'http://www.openwall.com/lists/oss-security/2016/01/26/4'  # CVE request
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+# CVE-2015-3421
 WordPress plugin eshop:
   1:
     location: ['/wp-content/plugins/eshop/readme.txt']
@@ -2314,5 +2315,13 @@ WordPress plugin gallery-album:
     secure_version: '1.2.1'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
     cve: 'https://nvd.nist.gov/vuln/detail/CVE-2017-14125 http://lists.openwall.net/full-disclosure/2017/09/22/1'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
+WordPress plugin roomcloud:
+  1:
+    location: ['/wp-content/plugins/roomcloud/readme.txt']
+    secure_version: '1.3'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2015-3904'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
