--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -2335,3 +2335,11 @@ WordPress plugin wp-powerplaygallery:
     cve: 'https://nvd.nist.gov/vuln/detail/CVE-2015-5599 https://nvd.nist.gov/vuln/detail/CVE-2015-5681 https://nvd.nist.gov/vuln/detail/CVE-2015-5682 http://www.vapid.dhs.org/advisory.php?v=132'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin rk-responsive-contact-form:
+  1:
+    location: ['/wp-content/plugins/rk-responsive-contact-form/readme.txt']
+    secure_version: 'N/A'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2017-1002027 http://www.vapidlabs.com/advisory.php?v=198 http://www.openwall.com/lists/oss-security/2017/08/23/3'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
