--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -2352,3 +2352,11 @@ WordPress plugin gallery-bank:
     cve: 'https://nvd.nist.gov/vuln/detail/CVE-2014-8758 https://g0blin.co.uk/cve-2014-8758/'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin easy-contact-form-solution:
+  1:
+    location: ['/wp-content/plugins/easy-contact-form-solution/readme.txt']
+    secure_version: '1.7'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2014-7240 https://g0blin.co.uk/cve-2014-7240/'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
