--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -2394,7 +2394,7 @@ WordPress plugin flash-album-gallery:
     location: ['/wp-content/plugins/flash-album-gallery/readme.txt']
     secure_version: '4.25'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
-    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2014-8491'
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2014-8491 https://g0blin.co.uk/cve-2014-8491/'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 WordPress plugin post-highlights:
@@ -2402,6 +2402,6 @@ WordPress plugin post-highlights:
     location: ['/wp-content/plugins/post-highlights/readme.txt']
     secure_version: '2.6.1'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
-    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2014-8087'
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2014-8087 https://g0blin.co.uk/cve-2014-8087/'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
