--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -2406,3 +2406,11 @@ WordPress plugin post-highlights:
     cve: 'https://nvd.nist.gov/vuln/detail/CVE-2014-8087 https://g0blin.co.uk/cve-2014-8087/'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin furikake:
+  1:
+    location: ['/wp-content/plugins/furikake/readme.txt']
+    secure_version: '0.1.3'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2017-1000434 https://cjc.im/advisories/0008/'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
