--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -2432,22 +2432,20 @@ WordPress plugin custom-map:
     cve: 'https://nvd.nist.gov/vuln/detail/CVE-2017-17744 http://lists.openwall.net/full-disclosure/2017/12/19/16'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
-# CVE requested 2018-01-14
 WordPress plugin dbox-slider-lite:
   1:
     location: ['/wp-content/plugins/dbox-slider-lite/readme.txt']
     secure_version: 'N/A'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
-    cve: 'http://lists.openwall.net/full-disclosure/2018/01/11/2 http://defensecode.com/advisories/DC-2017-01-003_WordPress_Dbox_3D_Slider_Lite_Plugin_Advisory.pdf'
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2018-5374 http://lists.openwall.net/full-disclosure/2018/01/11/2 http://defensecode.com/advisories/DC-2017-01-003_WordPress_Dbox_3D_Slider_Lite_Plugin_Advisory.pdf'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
-# CVE requested 2018-01-14
 WordPress plugin smooth-slider:
   1:
     location: ['/wp-content/plugins/smooth-slider/readme.txt']
     secure_version: 'N/A'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
-    cve: 'http://lists.openwall.net/full-disclosure/2018/01/11/3 http://www.defensecode.com/advisories/DC-2018-01-004_WordPress_Smooth_Slider_Plugin_Advisory.pdf'
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2018-5373 http://lists.openwall.net/full-disclosure/2018/01/11/3 http://www.defensecode.com/advisories/DC-2018-01-004_WordPress_Smooth_Slider_Plugin_Advisory.pdf'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 WordPress plugin testimonial-slider:
@@ -2455,6 +2453,6 @@ WordPress plugin testimonial-slider:
     location: ['/wp-content/plugins/testimonial-slider/readme.txt']
     secure_version: '1.2.5'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
-    cve: 'http://lists.openwall.net/full-disclosure/2018/01/11/4 http://www.defensecode.com/advisories/DC-2018-01-005_WordPress_Testimonial_Slider_Plugin_Advisory.pdf'
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2018-5372 http://lists.openwall.net/full-disclosure/2018/01/11/4 http://www.defensecode.com/advisories/DC-2018-01-005_WordPress_Testimonial_Slider_Plugin_Advisory.pdf'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
