--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -2457,3 +2457,11 @@ WordPress plugin testimonial-slider:
     cve: 'https://nvd.nist.gov/vuln/detail/CVE-2018-5372 http://lists.openwall.net/full-disclosure/2018/01/11/4 http://www.defensecode.com/advisories/DC-2018-01-005_WordPress_Testimonial_Slider_Plugin_Advisory.pdf'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin acurax-social-media-widget:
+  1:
+    location: ['/wp-content/plugins/acurax-social-media-widget/readme.txt']
+    secure_version: '3.2.6'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'http://lists.openwall.net/full-disclosure/2018/01/10/8'  # TODO: CVE requested 2018-01-27
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
