--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -2505,3 +2505,11 @@ WordPress plugin rating-widget:
     cve: 'http://lists.openwall.net/full-disclosure/2018/04/10/3 https://advisories.dxw.com/advisories/rating-widget-debug-mode/'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin likebtn-like-button:
+  1:
+    location: ['/wp-content/plugins/likebtn-like-button/readme.txt']
+    secure_version: '2.5.4'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'http://lists.openwall.net/full-disclosure/2018/04/10/2 https://advisories.dxw.com/advisories/likebtn-set-any-option/'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
