--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -1825,6 +1825,7 @@ WordPress plugin post-indexer:
     cve: 'https://security.dxw.com/advisories/sql-injection-in-post-indexer-allows-super-admins-to-read-the-contents-of-the-database/'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+# CVE-2014-7153 http://packetstormsecurity.com/files/128118/WordPress-Huge-IT-Image-Gallery-1.0.0-SQL-Injection.html
 WordPress plugin gallery-images:
   1:
     location: ['/wp-content/plugins/gallery-images/readme.txt']
@@ -2511,5 +2512,14 @@ WordPress plugin likebtn-like-button:
     secure_version: '2.5.4'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
     cve: 'http://lists.openwall.net/full-disclosure/2018/04/10/2 https://advisories.dxw.com/advisories/likebtn-set-any-option/'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
+# CVE-2014-5324 3.5 http://jvn.jp/en/jp/JVN87863382/index.html https://jvndb.jvn.jp/en/contents/2014/JVNDB-2014-000112.html https://wpvulndb.com/vulnerabilities/7625
+WordPress plugin nmedia-user-file-uploader:
+  1:
+    location: ['/wp-content/plugins/nmedia-user-file-uploader/readme.txt']
+    secure_version: '3.8'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'http://openwall.com/lists/oss-security/2015/06/10/2 https://wpvulndb.com/vulnerabilities/8044'  # http://seclists.org/oss-sec/2015/q2/676
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
