--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -2539,3 +2539,11 @@ WordPress plugin wp-ulike:
     cve: 'https://advisories.dxw.com/advisories/stored-xss-wp-ulike/ http://lists.openwall.net/full-disclosure/2018/05/14/6 https://advisories.dxw.com/advisories/wp-ulike-delete-rows/ http://lists.openwall.net/full-disclosure/2018/05/14/7'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin easy-modal:
+  1:
+    location: ['/wp-content/plugins/easy-modal/readme.txt']
+    secure_version: '2.1.0'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2017-12946 https://nvd.nist.gov/vuln/detail/CVE-2017-12947 http://www.defensecode.com/advisories/DC-2017-01-007_WordPress_Easy_Modal_Plugin_Advisory.pdf'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
